Noise suppression and Normalization and Standardization

--- a/noiseSuppression.ipynb
+++ b/noiseSuppression.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install opencv-python numpy tqdm"
+    "%pip install opencv-python numpy tqdm scikit-image matplotlib"
    ]
   },
   {
@@ -31,23 +31,7 @@
    "execution_count": null,
    "id": "221c0a4d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing yes:   0%|          | 0/155 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing yes: 100%|██████████| 155/155 [00:46<00:00,  3.33it/s]\n",
-      "Processing no: 100%|██████████| 98/98 [00:14<00:00,  6.62it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import cv2\n",
@@ -200,19 +184,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ea8fceb6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing yes: 100%|██████████| 308/308 [00:03<00:00, 79.23it/s] \n",
-      "Processing no: 100%|██████████| 196/196 [00:01<00:00, 147.37it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import cv2\n",
@@ -255,14 +230,6 @@
     "            save_path = os.path.join(out_folder, f\"{name}_std.png\")\n",
     "            cv2.imwrite(save_path, img_out)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82c866d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
